# devimote

./: .env.example  .gitignore  CHANGELOG.rst  CLAUDE.md  README.md  deploy-ha-dev.sh  hacs.json  pyproject.toml  uv.lock.license
.github/workflows/: pylint.yml  reuse.yml
custom_components/devialet_expert_remote/: __init__.py  backend.py  config_flow.py  const.py  coordinator.py  manifest.json  media_player.py  strings.json
src/: backend.py  cli.py  devimote.py
