# SPDX-FileCopyrightText: 2026 Renaud Bruyeron <bruyeron@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "devialet-remote"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "click",
    "python-dotenv",
]

[project.scripts]
devialet = "cli:main"

[dependency-groups]
dev = ["pylint"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "backend"]

[tool.setuptools.package-dir]
"" = "src"
