# SPDX-FileCopyrightText: 2026 Renaud Bruyeron <bruyeron@gmail.com>
#
# SPDX-License-Identifier: GPL-3.0-or-later

[project]
name = "devialet-remote"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "click",
    "python-dotenv",
]

[project.scripts]
devialet     = "cli:main"
devialet-gui = "devimote:main"

[dependency-groups]
dev = ["pylint"]
gui = ["kivy[base]"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli", "backend", "devimote"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pylint.format]
max-line-length = 120
